Fix issue where the big orange buttons on small screens
Fixes the issue where the big orange buttons were overlapping
themselves on small screens; specifically on the home screen, with that
long button.

--- a/styles/scss/queerie.scss
+++ b/styles/scss/queerie.scss
@@ -151,6 +151,7 @@ $breakBig: 1200px;
   margin-bottom: 20px;
   background-color: $gqOrange;
   color: $gqWhite;
+  line-height: 35px;
 
   &:hover {
     background-color: $gqYellow;
